# anga-grid

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
doc/: architecture.md  calendars.md  cli.md  contributing-calendars.md  data-sources.md  datasets.md  glossary.md  index.md  installation.md  operations.md  roadmap.md  troubleshooting.md
doc/adr/: 0001-seasonal-calendars.md  0002-no-default-network-fetch.md  0003-manifest-as-attrs.md  0004-test-layer-taxonomy.md
examples/: 01_chirps_njoro_spi.py  02_onset_detection_long_rains.py  03_wrsi_maize_long_rains.py  04_long_rains_trend_and_quintile.py
src/anga_grid/: __init__.py  _version.py  aggregation.py  correction.py  exceptions.py  logging.py  provenance.py  rollup.py  season.py  severity.py  storage.py  types.py
src/anga_grid/aggregation/: __init__.py  reducers.py  seasonal.py
src/anga_grid/cli/: __init__.py  classify.py  compute.py  fetch.py  main.py  quintile.py  rollup.py  seasons.py  trend.py
tests/: conftest.py
tests/fixtures/: README.md  agera5.py  regenerate.py  synthetic.py  tamsat.py
tests/integration/: test_cli_end_to_end.py  test_cli_rollup_classify.py  test_cli_trend_quintile.py  test_committed_fixtures.py  test_synthetic_data_consistency.py
tests/performance/: test_performance_indicators.py  test_performance_v05.py
tests/property/: test_property.py  test_property_v05.py
tests/providers/: test_agera5.py  test_chirps.py  test_nex_gddp.py  test_tamsat.py
tests/regression/: test_regression_canonicalize.py  test_regression_provenance.py  test_regression_v05.py
tests/roundtrip/: test_roundtrip_storage.py  test_roundtrip_v05.py
tests/smoke/: test_smoke_cli.py  test_smoke_imports.py  test_smoke_v05.py
tests/unit/: test_aggregation.py  test_correction.py  test_cropping.py  test_cropping_regions.py  test_indicators_dry_spell.py  test_indicators_evapotranspiration.py  test_indicators_gdd.py  test_indicators_onset.py  test_indicators_spi.py  test_indicators_temperature_extremes.py  test_indicators_trend.py  test_indicators_wrsi.py  test_logging.py  test_provenance.py  test_provenance_chain.py  test_rollup.py  test_rollup_polygon.py  test_season.py  test_severity.py  test_severity_quintile.py  test_storage.py  test_types.py
(+90 files in other folders)
