[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "anga-grid"
version = "0.5.5"
description = "Gridded climate indicators for East African agriculture"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Preston Osoro", email = "prestonosoro56@gmail.com" },
]
keywords = ["climate", "agriculture", "east-africa", "chirps", "xarray", "drought"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "xarray>=2024.0",
    "xclim>=0.49",
    "numba>=0.59",
    "pint>=0.23",
    "zarr>=2.17,<3",
    "numpy>=1.26",
    "pandas>=2.0",
    "netCDF4>=1.6",
    "click>=8.1",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
anga = "anga_grid.cli.main:cli"

[project.urls]
Repository = "https://github.com/preston-56/anga-grid"
Issues = "https://github.com/preston-56/anga-grid/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/anga_grid"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "N",
    "RET",
    "SIM",
    "PTH",
]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: minimum import / wiring tests; selectable via '-m smoke'",
    "regression: pinned past-bug behaviours, selectable via '-m regression'",
    "performance: benchmark-shaped tests, selectable via '-m performance'",
    "roundtrip: write-then-read symmetry tests, selectable via '-m roundtrip'",
    "property: property-based tests, selectable via '-m property'",
]

[tool.coverage.run]
source = ["src/anga_grid"]
branch = true
